docs(jit): enhance VM parameters reference
- Add quick index for easy navigation
- Expand compiler selection with tiered compilation details
- Add OSR (On-Stack Replacement) parameters
- Add code cache structure diagram
- Enhance inline control with CompileCommand examples
- Add C2 optimization categories (loop, escape analysis, vectorization)
- Add platform-specific parameters (x86/x64, ARM, RISC-V, LoongArch)
- Add JDK version-specific parameters (17+, 21+, 23+)
- Add unified logging (JDK 9+) examples
- Add container environment tuning
- Add performance tuning profiles (startup/throughput/low-latency)
- Add contributor links
- Add quick reference tables

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>